--- a/gemserver/raw/ntp/ntp.conf
+++ b/gemserver/raw/ntp/ntp.conf
@@ -14,9 +14,9 @@ restrict -6 ::1
 
 # Use public servers from the pool.ntp.org project.
 # Please consider joining the pool (http://www.pool.ntp.org/join.html).
-server 0.rhel.pool.ntp.org
-server 1.rhel.pool.ntp.org
-server 2.rhel.pool.ntp.org
+server 3.cn.pool.ntp.org
+server 0.cn.pool.ntp.org
+server 2.cn.pool.ntp.org
 
 #broadcast 192.168.1.255 key 42		# broadcast server
 #broadcastclient			# broadcast client
